# JvmXposed

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: push_ci.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jvm/core/src/main/java/dev/tmpfs/jvmplant/api/: JvmPlant.java
jvm/core/src/main/java/dev/tmpfs/jvmplant/impl/: ClassFileVerifier.java  DefaultNativeLoaders.java  HotSpotClassFileVerifyBypass.java  JvmPlantHookManager.java  JvmPlantNativeBridge.java  ReflectHelper.java  TheGlobalStaticFieldsGenerator.java
jvm/jvmplant-native/: build.gradle.kts
jvm/jvmplant-shared/: build.gradle.kts
jvm/jvmplant-shared/src/main/java/dev/tmpfs/jvmplant/: JvmPlant.java
jvm/jvmplant-shared/src/main/java/dev/tmpfs/jvmplant/api/: DefaultHookBridge.java  IHookBridge.java  JvmPlant.java  LogHandler.java  NativeLibraryLoader.java
jvm/jvmplant-shared/src/main/java/dev/tmpfs/jvmplant/impl/: DefaultLogHandler.java  DefaultNativeLoaders.java  JvmPlantCallbackDispatcher.java  JvmPlantCallbackToken.java  JvmPlantClassTransformer.java  JvmPlantHookImpl.java  JvmPlantHookManager.java  JvmPlantNativeBridge.java  JvmPlantTrampoline0.java  ReflectHelper.java  VersionConfig.java
jvm/jvmplant-shared/src/main/java/dev/tmpfs/jvmplant/nativeloader/: NativeLibraryLoader.java
jvm/jvmplant-test/: build.gradle.kts
jvm/jvmplant-test/src/test/java/dev/tmpfs/jvmplant/test/: HookTests.java  HookUtils.java  TestEnvironments.java
jvm/test/: build.gradle.kts
jvm/test/src/test/java/dev/tmpfs/jvmplant/example/: Example1.java
jvm/test/src/test/java/dev/tmpfs/jvmplant/test/: HookTests.java  TestEnvironments.java
jvm/xposed/: build.gradle.kts
jvm/xposed-jvm/: build.gradle.kts
jvm/xposed-jvm/src/main/java/de/robv/android/xposed/: WrappedCallbacks.java  XposedHelpers.java
jvm/xposed-jvm/src/main/java/de/robv/android/xposed/services/: BaseService.java  FileResult.java
jvm/xposed/src/main/java/de/robv/android/xposed/: IXposedHookZygoteInit.java  XC_MethodHook.java  XposedBridge.java
jvm/xposed/src/main/java/de/robv/android/xposed/callbacks/: XCallback.java
jvm/xposed/src/main/java/de/robv/android/xposed/services/: DirectAccessService.java
jvm/xposed/src/main/java/dev/tmpfs/jvmplant/repackaged/android/util/: Printer.java
jvm/xposed/src/main/java/dev/tmpfs/jvmplant/repackaged/com/android/internal/util/: FastPrintWriter.java
native/: .clang-format  CMakeLists.txt
native/include/: jni.h  platform_compat.h
native/jni/: jvmplant_bridge.cc  jvmplant_bridge.h
native/openjdkvm/: jvmti_error_strings.cc  jvmti_error_strings.h  openjdkvm_hook_impl.cc  openjdkvm_hook_impl.h
native/platform/: debug_utils.cc  debug_utils.h
native/shared/: jvmplant_api.h
native/utils/: jni_utils.cc  jni_utils.h  log_common.cc  log_common.h  log_macro.h
